[package]
name = "ugo_wasm_binding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.92"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-logger = "0.2.0"
log = "0.4.21"

[lib]
crate-type = ["cdylib", "rlib"]